# ikwf-history

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml
database/: README.md  _all-brackets.sql  _all-tournaments.sql  _bracket-json.sql  _first-name-replacements.json  _full-name-replacements.json  _last-name-replacements.json  _matches-for-scores.sql  _refresh.sh  _scratch-bracket-json.sql  bracket_templates.py  compute_match_scores.py  ikwf.sqlite  normalize_names.py
database-v1/: README.md  _all-competitors.sql  _all-tournaments.sql  _full-name-replacements.json  _last-name-replacements.json  compute_match_scores.py
database-v2/: 2001.txt  README.md  _2026-state-preview.json  _all-brackets.sql  _all-qualifiers.sql  _all-teams.sql  _all-tournaments.sql  _award-winners.json  _filenames-by-year.json  _make_2026_temporary.py  _match-data.sql  _refresh.sh  _team-info.sql  _team-name-duplicates.json  _team-name-synonyms.json  _unverified-team-info.sql  _verified-team-info.sql  _weight-classes.json  bracket_utils.py  by-team.sql  find_team_duplicates.py  ikwf.sqlite  match_scores.py  team-crowd-source.csv  team_csv_crowd_source.py  write_bracket_html.py  write_html.py  write_sql.py  write_team_html.py
intermediate-data/: 1989-names.txt  bracket_utils.py  extract_1971.py  extract_1972.py  extract_1973.py  extract_1974.py  extract_1975.py  extract_1976.py  extract_1977.py  extract_1978.py  extract_1979.py  extract_1980.py  extract_1981.py  extract_1982.py  extract_1983.py  extract_1984.py  extract_1985.py  extract_1986.py  extract_1987.py  extract_1988.py  (+154 more)
(+5296 files in other folders)
