[project]
name = "ikwf-history"
version = "0.0.1"
description = "IKWF History: collecting old brackets and building website"
readme = "README.md"
requires-python = "== 3.13.3"
dependencies = [
    "beautifulsoup4",
    "chardet",
    "ipython",
    "pillow",
    "pydantic",
    "ruff",
    "selenium",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N", "SIM"]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
